<resources>
    <!-- App name -->
    <string name="app_name">Simple Pocket Account</string>

    <!-- Warning messages -->
    <string name="warning_amount">Enter Amount</string>


    <!-- Activity names -->
    <string name="title_activity_expense">Add Expense</string>
    <string name="title_activity_income">Add Income</string>
    <string name="title_activity_summary">View Summary</string>
    <string name="title_activity_select_date">Select Date</string>
    <string name="title_activity_select_week">Select Week</string>
    <string name="title_activity_select_month_year">Select Month and Year</string>
    <string name="title_activity_select_year">Select Year</string>
    <string name="title_activity_daily_summary">Daily Summary</string>
    <string name="title_activity_weekly_summary">Weekly Summary</string>
    <string name="title_activity_monthly_summary">Monthly Summary</string>
    <string name="title_activity_yearly_summary">Yearly Summary</string>
    <string name="title_activity_detailed_summary">Detailed Summary</string>
    <string name="title_activity_chart">Chart</string>

    <!-- Field names -->
    <string name="notes">Notes</string>
    <string name="payment_method">Payment Method</string>
    <string name="expense_or_income">Expense/Income</string>
    <string name="view_chart">View Chart</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_income">Add Income</string>
    <string name="view_summary">View Summary</string>
    <string name="view_expense">Expense</string>
    <string name="view_income">Income</string>
    <string name="dollar_sign_expense">($)Total Expense</string>
    <string name="dollar_sign_income">($)Total Income</string>
    <string name="expense_total">Total Expense = $</string>
    <string name="income_total">Total Income = $</string>
    <string name="total">Net Total = $</string>
    <string name="category_prompt">Choose a category</string>
    <string name="category">Category</string>
    <string name="type_prompt">Choose a category</string>
    <string name="category_type">Category</string>
    <string name="amount">Amount</string>
    <string name="amount_dollar_sign">($) Amount</string>
    <string name="day">Day</string>
    <string name="date">Date</string>
    <string name="dollar_sign">$</string>
    <string name="submit_button">Submit</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="year">Year</string>
    <string name="select_date">Select Date</string>
    <string name="select_week">Select Week</string>
    <string name="select_month_year">Select Month and Year</string>
    <string name="select_year">Select Year</string>
    <string name="monthYear">Month Year</string>

    <!-- MonthYear CustomDialog -->
    <string name="alert_dialog_title">Please Select</string>
    <string name="positive_button_text">Select</string>
    <string name="negative_button_text">Cancel</string>

    <!-- List of expense categories -->
    <string-array name="list_expense_category">
        <item>Housing</item>
        <item>Utilities</item>
        <item>Food</item>
        <item>Clothing</item>
        <item>Medical/Healthcare</item>
        <item>Donations/Gifts to Charity</item>
        <item>Savings and Insurance</item>
        <item>Entertainment and Recreation</item>
        <item>Transportation</item>
        <item>Personal/Debt Payments/Misc</item>
    </string-array>

    <!-- List of income categories -->
    <string-array name="list_income_category">
        <item>Salary</item>
        <item>Business/Profession</item>
        <item>Capital Gain</item>
        <item>House Property</item>
        <item>Gifts</item>
        <item>Others</item>
    </string-array>

    <!-- List of payment method -->
    <string-array name="list_payment_method">
        <item>Cash</item>
        <item>Check</item>
        <item>Debit/Credit Card</item>
        <item>Others</item>
    </string-array>

    <!-- List of summary types -->
    <string-array name="list_summary_type">
        <item>Daily Summary</item>
        <item>Weekly Summary</item>
        <item>Monthly Summary</item>
        <item>Yearly Summary</item>
    </string-array>

    <!-- List of chart types -->
    <string-array name="list_chart_type">
        <item>Expense/Category</item>
        <item>Expense/Payment Method</item>
        <item>Income/Category</item>
        <item>Income/Payment Method</item>
    </string-array>

</resources>
