<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:enabled="true"
        android:id="@+id/action_add_expense"
        android:icon="@drawable/ic_expense"
        android:title="@string/add_expense"
        app:showAsAction="ifRoom"
        ></item>
    <item
        android:enabled="true"
        android:id="@+id/action_view_summary"
        android:icon="@drawable/ic_view_summary"
        android:title="@string/view_summary"
        app:showAsAction="ifRoom"
        ></item>
    <item
        android:enabled="true"
        android:id="@+id/action_add_income"
        android:icon="@drawable/ic_income"
        android:title="@string/add_income"
        app:showAsAction="ifRoom"
        ></item>

</menu>