<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_weight="5"
        android:gravity="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:text="@string/week"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:paddingLeft="5dp"
        android:gravity="center_vertical"
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense_total" />

        <TextView
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar_sign" />

        <TextView
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount" />

    </LinearLayout>

    <LinearLayout
        android:paddingLeft="5dp"
        android:gravity="center_vertical"
        android:layout_weight="5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/income_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar_sign" />

        <TextView
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount" />

    </LinearLayout>

    <LinearLayout
        android:paddingLeft="5dp"
        android:gravity="center_vertical"
        android:layout_weight="5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar_sign" />

        <TextView
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount" />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:gravity="center"
            android:text="@string/day"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <TextView
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:gravity="center"
            android:layout_weight="50"
            android:text="@string/view_income"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <TextView
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:gravity="center"
            android:layout_weight="50"
            android:text="@string/view_expense"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <ListView
        android:layout_weight="75"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>