<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textColor="#000000"
        android:layout_weight="8"
        android:id="@+id/yearYearlySummary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/year"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <LinearLayout

        android:gravity="center"
        android:layout_weight="8"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <TextView
            android:textColor="#000000"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense_total" />

        <TextView
            android:textColor="#000000"
            android:id="@+id/expenseAmountYearlySummary"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income_total"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/incomeAmountYearlySummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/netAmountYearlySummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="#000000" />

    </LinearLayout>

    <LinearLayout

        android:gravity="center"
        android:layout_weight="8"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:textColor="#000000"
            android:id="@+id/monthYearlySummary"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:gravity="center"
            android:layout_weight="30"
            android:text="@string/month"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <TextView
            android:textColor="#000000"
            android:id="@+id/totalIncomeYearlySummary"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:gravity="center"
            android:layout_weight="35"
            android:text="@string/dollar_sign_income"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <TextView
            android:textColor="#000000"
            android:id="@+id/totalExpenseYearlySummary"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:gravity="center"
            android:layout_weight="35"
            android:text="@string/dollar_sign_expense"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <ListView
        android:id="@+id/listViewYearlySummary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60" />

</LinearLayout>