<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/backgroundColor"
    android:padding="5dp"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:textColor="@color/fontColor"
        android:id="@+id/dayWeeklyListView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="30"
        android:gravity="center"
        android:text="@string/day"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <TextView
        android:textColor="@color/fontColor"
        android:id="@+id/incomeWeeklyListView"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:gravity="center"
        android:layout_weight="35"
        android:text="@string/view_income"
        android:layout_width="0dp"
        android:layout_height="match_parent" />

    <TextView
        android:textColor="@color/fontColor"
        android:id="@+id/expenseWeeklyListView"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:gravity="center"
        android:layout_weight="35"
        android:text="@string/view_expense"
        android:layout_width="0dp"
        android:layout_height="match_parent" />
</LinearLayout>