<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mingkie.simplepocketaccount.MainActivities.ExpenseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/selectDateExpenseTextView"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/fontColor"
            android:text="@string/select_date" />

        <TextView
            android:id="@+id/dateExpenseTextView"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/fontColor"
            android:text="@string/date" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/categoryExpenseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/category"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/fontColor" />

        <Spinner
            android:id="@+id/categoryExpenseSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:entries="@array/list_category"
            android:gravity="center"
            android:prompt="@string/category_prompt"
            android:scrollbarSize="30dp"></Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/paymentMethodExpenseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/payment_method"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/fontColor" />

        <Spinner
            android:id="@+id/typeExpenseSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:entries="@array/list_category"
            android:gravity="center"
            android:prompt="@string/category_prompt"
            android:scrollbarSize="30dp"></Spinner>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="20"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/expenseWarning"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:gravity="center"
            android:text="@string/warning_amount"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="70"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dollarSignExpenseTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dollar_sign"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/fontColor" />

            <EditText
                android:id="@+id/amountExpenseEditView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/amount"
                android:inputType="numberDecimal"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/fontColor"
                android:textColorHint="@color/fontColor" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/notesExpenseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/notes"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/fontColor" />

        <EditText
            android:id="@+id/notesExpenseEditTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:prompt="@string/category_prompt"
            android:scrollbarSize="30dp" />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:gravity="center" />

    <Button
        android:id="@+id/submitExpenseButton"
        android:layout_weight="6"
        android:layout_gravity="center"
        android:text="@string/submit_button"
        android:textColor="#FFF"
        android:background="@drawable/mybutton"
        android:layout_width="wrap_content"
        android:layout_height="0dp" />

    <TextView
        android:layout_weight="7"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/expenseBottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@drawable/nav_item_color_state"
        app:itemTextColor="@drawable/nav_item_color_state"
        app:menu="@menu/bottom_navigation_bar"
        />

</LinearLayout>
