<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dailySummaryDate"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:gravity="center"
        android:text="@string/date"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/fontColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:gravity="center_vertical"
            android:id="@+id/dailySummaryExpenseTotal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/expense_total"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/fontColor" />

        <TextView
            android:gravity="center_vertical"
            android:id="@+id/dailySummaryExpenseTotalAmount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/amount"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/fontColor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:gravity="center_vertical"
            android:id="@+id/dailySummaryIncomeTotal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/income_total"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/fontColor" />

        <TextView
            android:gravity="center_vertical"
            android:id="@+id/dailySummaryIncomeTotalAmount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/amount"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/fontColor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:gravity="center_vertical"
            android:id="@+id/dailySummaryNetTotal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/total"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/fontColor" />

        <TextView
            android:gravity="center_vertical"
            android:id="@+id/dailySummaryNetTotalAmount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/amount"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/fontColor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/expenseIncomeDailySummary"
            android:textColor="@color/fontColor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/expense_or_income"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />



        <TextView
            android:textColor="@color/fontColor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/amount_dollar_sign"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    </LinearLayout>

    <ListView
        android:id="@+id/actionHistoryListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60"></ListView>

</LinearLayout>