<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mingkie.simplepocketaccount.ExpenseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dayTextView"
            android:textColor="@color/fontColor"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day" />

        <TextView
            android:id="@+id/dateTextView"
            android:textColor="@color/fontColor"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/typeTextView"
            android:textColor="@color/fontColor"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/type" />

        <Spinner
            android:layout_marginTop="10dp"
            android:id="@+id/moneytypeSpinner"
            android:entries="@array/list_money_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:scrollbarSize="30dp">
        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dollarSignTextView"
            android:textColor="@color/fontColor"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dollar_sign" />

        <EditText
            android:id="@+id/amountEditView"
            android:textColorHint="@color/fontColor"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/amount" />

    </LinearLayout>

    <TextView
        android:layout_weight="7"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <Button
        android:layout_weight="6"
        android:id="@+id/submitButton"
        android:layout_gravity="center"
        android:text="@string/submit_button"
        android:textColor="#FFF"

        android:background="@drawable/mybutton"
        android:layout_width="wrap_content"
        android:layout_height="0dp" />

    <TextView
        android:layout_weight="7"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@drawable/nav_item_color_state"
        app:itemTextColor="@drawable/nav_item_color_state"
        app:menu="@menu/main_bottom_navigation_bar"
        />

</LinearLayout>